--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,12 @@
       <div class="navbar navbar-default">
         <div class="lang">
           <ul class="nav">
-            <li <%= li_class("ar") %> lang="ar" xml:lang="ar"><a href="<%= url_for(:locale => :ar) %>">ï»ïº®ïºï»³</a></li>
-            <li <%= li_class("zh") %> lang="zh" xml:lang="zh"><a href="<%= url_for(:locale => :zh) %>">ä¸­æ</a></li>
+            <li <%= li_class("ar") %> lang="ar" xml:lang="ar"><a href="<%= url_for(:locale => :ar) %>">ﻉﺮﺒﻳ</a></li>
+            <li <%= li_class("zh") %> lang="zh" xml:lang="zh"><a href="<%= url_for(:locale => :zh) %>">中文</a></li>
             <li <%= li_class("en") %> lang="en" xml:lang="en"><a href="<%= url_for(:locale => :en) %>">English</a></li>
-            <li <%= li_class("fr") %> lang="fr" xml:lang="fr"><a href="<%= url_for(:locale => :fr) %>">FranÃ§ais</a></li>
-            <li <%= li_class("ru") %> lang="ru" xml:lang="ru"><a href="<%= url_for(:locale => :ru) %>">Ð ÑÑÑÐºÐ¸Ð¹</a></li>
-            <li <%= li_class("es") %> lang="es" xml:lang="es"><a href="<%= url_for(:locale => :es) %>">EspaÃ±ol</a></li>
+            <li <%= li_class("fr") %> lang="fr" xml:lang="fr"><a href="<%= url_for(:locale => :fr) %>">Français</a></li>
+            <li <%= li_class("ru") %> lang="ru" xml:lang="ru"><a href="<%= url_for(:locale => :ru) %>">Русский</a></li>
+            <li <%= li_class("es") %> lang="es" xml:lang="es"><a href="<%= url_for(:locale => :es) %>">Español</a></li>
           </ul>
         </div>
       </div>
@@ -36,7 +36,7 @@
       <div class="navbar navbar-default">
         <div class="navbar-inner">
           <ul class="nav pull-left">
-            <li><%= link_to 'UNBIS Thesaurus', home_path, class: "navbar-brand" %></li>
+            <li><%= link_to I18n.t('vocs_app_name'), home_path, class: "navbar-brand" %></li>
           </ul>
           <ul class="nav pull-right">
             <li><%= link_to I18n.t('nav.terms'), 'terms' %></li>
