--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,24 @@
             <li><%= link_to I18n.t('vocs_app_name'), home_path, class: "navbar-brand" %></li>
           </ul>
           <ul class="nav pull-right">
+            <li><%= link_to I18n.t('nav.home'), home_path %></li>
             <li><%= link_to I18n.t('nav.terms'), 'terms' %></li>
             <li><%= link_to I18n.t('nav.categories'), 'categories' %></li>
-            <li><%= link_to I18n.t('nav.signup'), signup_path %></li>
+            <% if signed_in? %>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Profile", current_user %></li>
+                  <li><%= link_to "Settings", '#' %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Sign out", signout_path, method: "delete" %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Sign in", signin_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
