--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,18 +44,18 @@
             <li><%= link_to I18n.t('nav.categories'), 'categories' %></li>
             <% if signed_in? %>
               <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t('nav.account') %><b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", '#' %></li>
+                  <li><%= link_to I18n.t("nav.profile"), current_user %></li>
+                  <li><%= link_to I18n.t("nav.settings"), '#' %></li>
                   <li class="divider"></li>
                   <li>
-                    <%= link_to "Sign out", signout_path, method: "delete" %>
+                    <%= link_to I18n.t("nav.signout"), signout_path, method: "delete" %>
                   </li>
                 </ul>
               </li>
             <% else %>
-              <li><%= link_to "Sign in", signin_path %></li>
+              <li><%= link_to I18n.t("nav.signin"), signin_path %></li>
             <% end %>
           </ul>
         </div>
