--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,17 +43,8 @@
             <li><%= link_to I18n.t('nav.terms'), 'terms' %></li>
             <li><%= link_to I18n.t('nav.categories'), 'categories' %></li>
             <% if signed_in? %>
-              <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t('nav.account') %><b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to I18n.t("nav.profile"), current_user %></li>
-                  <li><%= link_to I18n.t("nav.settings"), '#' %></li>
-                  <li class="divider"></li>
-                  <li>
-                    <%= link_to I18n.t("nav.signout"), signout_path, method: "delete" %>
-                  </li>
-                </ul>
-              </li>
+            <li><%= link_to I18n.t("nav.profile"), current_user %></li>
+            <li><%= link_to I18n.t("nav.signout"), signout_path, method: "delete" %></li>
             <% else %>
               <li><%= link_to I18n.t("nav.signin"), signin_path %></li>
             <% end %>
