added categories and imrpoved concepts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           </ul>
           <ul class="nav pull-right">
             <li><%= link_to I18n.t('nav.home'), home_path %></li>
-            <li><%= link_to I18n.t('nav.terms'), 'terms' %></li>
+            <li><%= link_to I18n.t('nav.concepts'), 'concepts' %></li>
             <li><%= link_to I18n.t('nav.categories'), 'categories' %></li>
             <% if signed_in? %>
             <li><%= link_to I18n.t("nav.profile"), current_user %></li>
