changed some assoc types and added some extra models

--- a/app/views/concepts/_concept.html.erb
+++ b/app/views/concepts/_concept.html.erb
@@ -5,4 +5,6 @@
      @labels = concept.labels.preferred.for_locale('EN')
    end
 %>
-<li><%= render @labels %></li>
+<li>
+  <%= render @labels %>
+</li>
