--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -1,1 +1,1 @@
-<span class="conceptLabel"><%= label.value %></span>
+<span class="conceptLabel"><%= link_to label.value, label.labelable_type %></span>
